--- a/src/Components/ContactForm/ContactForm.module.css
+++ b/src/Components/ContactForm/ContactForm.module.css
@@ -1,16 +1,22 @@
 .form {
+  display: flex;
+
   margin-bottom: 15px;
 }
 
 .addField {
-  margin-right: 10px;
   padding: 5px;
+
+  margin-bottom: 5px;
 
   font-family: Roboto, sans-serif;
   font-size: 16px;
 }
 
 .btn {
+  width: 100px;
+  height: 32px;
+
   padding: 7px;
 
   font-family: Roboto, sans-serif;
@@ -26,4 +32,22 @@
 .btn:hover,
 .btn:focus {
   background-color: orange;
+}
+
+.label {
+  display: flex;
+  flex-direction: column;
+
+  margin-right: 15px;
+
+  width: calc((100% - 130px) / 2);
+}
+
+.error {
+  margin: 0;
+
+  font-family: Roboto, sans-serif;
+  font-size: 12px;
+  text-align: left;
+  color: red;
 }
